# DataDive25

./: README.md
.github/workflows/: build.py  deploy.yml
Team_Projects/Challenge6KatieBannon/: project.md
Team_Projects/GenerationNext/: cleaning.py  project.md
Team_Projects/SampleTeam/: project.md
Team_Projects/SpacePugs/: EDA.ipynb
Team_Projects/SpacePugs/LLMs_to_read_new_laws/: README.md  main.py  pyproject.toml  read_law.py
Team_Projects/SuperGroup8/: challenge8.html  project.md
Team_Projects/Table4/: .gitignore  analysis.md  analyze_data.py  data_instructions.md  fetch_data.py  more.md  project.md  teamMembers.md
Team_Projects/pub-sec-jobs/: dashboard_sketch.txt  project.md
